--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,4 +1,51 @@
 .directory-item-container {
-  background-color: blue;
-
+  // background-color: blue;
+  height: 650px;
+  width: 80%;
+  margin: 24px;
+  background: linear-gradient(#212121, #212121) padding-box,
+  linear-gradient(135deg, #DDBC9C, #E19B6A) border-box;
+  border-radius: 2px;
+  border: 2px solid transparent;
+  transition: 0.3s;
+  box-shadow: 10px 10px 40px black;
+  overflow: hidden;
+  h4, h3 {
+    margin: 0;
+  }
 }
+
+.directory-item-container:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+}
+
+.directory-item-bg-img {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: grayscale(80%);
+  transition: 0.3s;
+
+  // border-radius: 2px;
+}
+
+.directory-item-bg-img:hover {
+  filter: grayscale(0%);
+  transform: scale(1.03);
+}
+
+
+.directory-item-cover {
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  height: 100%;
+  width: 100%;
+}
+
+// ~~~~~~~~~~~~~~~~~~~~~~~~
