--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -13,7 +13,9 @@
 
 .category-title {
   display: flex;
-  justify-content: c;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
   h1 {
     font-family: 'Italiana',
     serif;
@@ -26,6 +28,16 @@
     -webkit-background-clip: text;
     letter-spacing: 12px;
     text-shadow: 10px 10px 10px black;
+    padding: 0px 64px;
+  }
+  .separator {
+    height: 1px;
+    width: 100%;
+    border: 0px solid transparent;
+    background-image: linear-gradient(135deg,
+        #DDBC9C 50%,
+        #C19D62 90%);
+    box-shadow: 12px 12px 12px black;
   }
 }
 
