--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .app-container {
   /* background-color: #212121; */
   background-color: #04060A;
+  /* background-image: linear-gradient(90deg,
+    #04060A 30%,
+    #432c08a5 50%,
+    #04060A 70%); */
 }
