--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -67,10 +67,11 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
-  p {
+  margin: 24px 0px;
+  a {
     font-family: 'Italiana',
     serif;
-    font-size: 20px;
+    font-size: 40px;
     font-weight: 100;
     background-image: linear-gradient(135deg,
       #DDBC9C 50%,
@@ -78,6 +79,12 @@
     color: transparent;
     -webkit-background-clip: text;
     text-shadow: 10px 10px 10px black;
+    transition: 0.3s;
+  }
+  a:hover {
+    background-image: linear-gradient(135deg,
+      #dbcdbf 50%,
+      #c0aa87 90%);
   }
 }
 
