--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -108,3 +108,21 @@
   border: 2px solid transparent;
   box-shadow: 10px 10px 40px black;
 }
+
+.category-video-container {
+  height: auto;
+  width: 70%;
+  h5 {
+    font-family: 'Italiana',
+      serif;
+    font-size: 30px;
+    font-weight: 100;
+    background-image: linear-gradient(135deg,
+        #DDBC9C 50%,
+        #C19D62 90%);
+    color: transparent;
+    -webkit-background-clip: text;
+    letter-spacing: 12px;
+    text-shadow: 10px 10px 10px black;
+  }
+}
