--- a/src/routes/home/home.styles.scss
+++ b/src/routes/home/home.styles.scss
@@ -1,3 +1,15 @@
-.home-container {
-    // background: linear-gradient(135deg, #2C1D14, #1F0F00);
+$desktop: 1200px;
+$laptop: 1024px;
+$tablet: 920px;
+$phone: 480px;
+
+
+// .home-container {
+//     // background: linear-gradient(135deg, #2C1D14, #1F0F00);
+// }
+
+@media screen and (max-width: $tablet) {
+  .home-container {
+    margin-bottom: 60px;
+  }
 }
