--- a/src/components/hamburger/hamburger.styles.scss
+++ b/src/components/hamburger/hamburger.styles.scss
@@ -10,7 +10,8 @@ $phone: 480px;
   flex-direction: column;
   align-items: flex-end;
   padding: 0;
-  background-color: #04060A;
+  // background-color: #04060A;
+  background-color: transparent;
   position: sticky;
   top: 0px;
   z-index: 10;
