--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -27,6 +27,7 @@ $phone: 480px;
 @media screen and (min-width: $laptop) {
   .nav-left {
     text-decoration: none;
+    transition: 0.5s;
     h1 {
       margin: 0;
       // color: white;
@@ -34,12 +35,14 @@ $phone: 480px;
       font-size: 80px;
       font-weight: 400;
       background-image: linear-gradient(135deg,
-        #DDBC9C 50%,
-        #C19D62 90%);
+      #DDBC9C 50%,
+      #C19D62 90%);
       color: transparent;
       -webkit-background-clip:text;
     }
-    h1:hover {
+  }
+  .nav-left:hover {
+    h1 {
       background-image: linear-gradient(135deg,
           #dbcdbf 50%,
           #c0aa87 90%);
