footer btns done

--- a/src/components/footer/footer.styles.scss
+++ b/src/components/footer/footer.styles.scss
@@ -32,7 +32,7 @@
   align-items: flex-end;
   flex-direction: column;
   justify-content: flex-end;
-  p {
+  a {
     color: white;
     margin: 8px 0px;
   }
